--- a/resStyle.css
+++ b/resStyle.css
@@ -67,6 +67,14 @@
     border: none;
     outline: none;
   }
+  input.invalid {
+      border: 2px red solid;
+  }
+
+  p.invalid {
+    color: red;
+  }
+
   header {
     text-align: center;
     background: linear-gradient(90deg, #d4eece, #55b3d0, #1e7eb7), no-repeat;
